dhall/tests/type-errors/unit/NaturalSubtractNotNatural.txt
Type error: Unhandled error: error: Wrong type of function argument
 --> <current file>:1:0
  |
1 | Natural/subtract True True
  | ^^^^^^^^^^^^^^^^^^^^^ Wrong type of function argument
  | ---------------- help: this expects an argument of type: Natural
  |                  ---- help: but this has type: Bool
  |
